--- a/package.json
+++ b/package.json
@@ -5,10 +5,8 @@
   "main": "index.js",
   "scripts": {
     "client": "npm start --prefix pressfeed-client",
-    "server": "nodemon ./pressfeed-server/dist/index.js",
-    "dev": "rm -rf ./pressfeed-server/dist/index.js && tsc && concurrently \"npm run server\" \"npm run client\"",
-    "watch": "tsc -w",
-    "start": "node ./pressfeed-server/dist/index.js"
+    "server": "nodemon ./pressfeed-server/src/index.ts",
+    "dev": "rm -rf ./pressfeed-server/dist/index.js && tsc && concurrently \"npm run server\" \"npm run client\""
   },
   "keywords": [],
   "author": "",
@@ -20,6 +18,7 @@
     "nodemon": "^2.0.15"
   },
   "dependencies": {
+    "@types/body-parser": "^1.19.2",
     "express": "^4.17.3"
   }
 }
