--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "client": "npm start --prefix pressfeed-client",
     "server": "nodemon ./pressfeed-server/src/index.ts",
-    "dev": "rm -rf ./pressfeed-server/dist/index.js && tsc && concurrently \"npm run server\" \"npm run client\""
+    "dev": "rm -rf ./pressfeed-server/dist/index.js && concurrently \"npm run server\" \"npm run client\""
   },
   "keywords": [],
   "author": "",
