--- a/package.json
+++ b/package.json
@@ -19,7 +19,12 @@
     "nodemon": "^2.0.15"
   },
   "dependencies": {
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.5.0",
+    "@types/material-ui": "^0.21.12",
     "axios": "^0.26.1",
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "moment": "^2.29.1"
   }
 }
