--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.5.0",
     "@mui/material": "^5.5.0",
     "@types/material-ui": "^0.21.12",
     "axios": "^0.26.1",
