--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.5.0",
     "@mui/material": "^5.5.0",
+    "@mui/styles": "^5.5.0",
     "@types/material-ui": "^0.21.12",
     "axios": "^0.26.1",
     "express": "^4.17.3",
