--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/material-ui": "^0.21.12",
     "axios": "^0.26.1",
     "express": "^4.17.3",
-    "moment": "^2.29.1"
+    "moment": "^2.29.1",
+    "react-error-boundary": "^3.1.4"
   }
 }
