started setup for database and implemented functions as props, to add/remove articles to favorites database in future

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "client": "npm start --prefix pressfeed-client",
     "server": "nodemon ./pressfeed-server/src/index.ts",
-    "dev": "rm -rf ./pressfeed-server/dist/index.js && concurrently \"npm run server\" \"npm run client\""
+    "dev": "rm -rf ./pressfeed-server/dist/index.js && concurrently \"npm run server\" \"npm run client\"",
+    "database": "psql -d expresso -f database/schema.sql"
   },
   "keywords": [],
   "author": "",
